[package]
name = "cordelia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.53", features = [
  "dns",
  "kad",
  "tokio",
  "ping",
  "macros",
  "identify",
  "request-response",
  "async-std",
  "serde",
  "gossipsub",
  "quic",
  "upnp",
] }
tokio = { version = "1.27.0", features = ["sync", "macros"] }
futures = "0.3"
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1.68"
thiserror = "1.0.40"
clap = { version = "4.2.4", features = ["cargo"] }
etcetera = "0.8.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
  "std",
  "env-filter",
  "time",
] }
tracing-log = "0.1.3"
serde = "1.0.160"
strum = { version = "0.24.1", features = ["derive", "strum_macros"] }
strum_macros = "0.24.3"
serde_derive = "1.0.160"
serde_json = "1.0.96"
hyper = { version = "0.14.26", features = ["server", "http1", "tcp"] }
blake3 = "1.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
num = "0.4.0"
rand = "0.8.5"
randomx-rs = { path = "../randomx-rs" }
heed = "0.11.0"
tracing-mutex = "0.2.1"
itertools = "0.11.0"
lru = "0.11.0"
quick-protobuf = "0.8.1"
hex = "0.4.3"
cached = "0.46.0"
time = { version = "0.3.30", features = ["macros"] }
