[package]
name = "libtaurus"
version = "0.1.0"
edition = "2021"

[lib]
name = "libtaurus"
path = "src/lib.rs"

[[bin]]
name = "taurusd"
path = "src/app/taurusd.rs"

[dependencies]
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
blake3 = "1.4"
cached = "0.46"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.2", features = ["cargo"] }
etcetera = "0.8"
futures = "0.3"
heed = "0.11"
hex = "0.4"
itertools = "0.11"
libp2p = { version = "0.53", features = [
  "dns",
  "kad",
  "tokio",
  "ping",
  "macros",
  "identify",
  "request-response",
  "async-std",
  "serde",
  "gossipsub",
  "quic",
  "upnp",
] }
lru = "0.11"
num = "0.4"
prost = "0.12"
rand = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
strum = { version = "0.24", features = ["derive", "strum_macros"] }
strum_macros = "0.24"
thiserror = "1.0"
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1.27", features = ["sync", "macros"] }
tracing = "0.1"
tracing-log = "0.1"
tracing-mutex = "0.2"
tracing-subscriber = { version = "0.3", features = [
  "std",
  "env-filter",
  "time",
] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
prost-build = "0.12"
